--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar class="mat-elevation-z4 header">
   <img class="logo" src="../assets/logo-elotech-branco.svg" />
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
