--- a/src/app/persons/persons-read/persons-read.component.html
+++ b/src/app/persons/persons-read/persons-read.component.html
@@ -1,1 +1,42 @@
-<div class="container"></div>
+<button
+  class="create-person-button"
+  (click)="this.openDialog(null)"
+  mat-raised-button
+  color="primary"
+>
+  Adicionar nova pessoa
+</button>
+<section class="content mat-elevation-z8" tabindex="0">
+  <table mat-table [dataSource]="persons">
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let person">{{ person.id }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let person">{{ person.name }}</td>
+    </ng-container>
+
+    <!-- cpf Column -->
+    <ng-container matColumnDef="cpf">
+      <th mat-header-cell *matHeaderCellDef>Cpf</th>
+      <td mat-cell *matCellDef="let person">{{ person.cpf }}</td>
+    </ng-container>
+
+    <!-- dateBirth Column -->
+    <ng-container matColumnDef="dateBirth">
+      <th mat-header-cell *matHeaderCellDef>Data Nasc.</th>
+      <td mat-cell *matCellDef="let person">{{ person.dateBirth }}</td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let person"></td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</section>
